fix weird margin on ie8 alumni logged for log out icon

--- a/css/_nav_icons.scss
+++ b/css/_nav_icons.scss
@@ -13,7 +13,7 @@
   }
   .icon-logout {
     background-image:url('../img/menu-icon/16px/logout.png');
-    padding-left: 30px!important;
+    
   }
 }
 /*for alumni
